Update Contact; fix overflow issue

--- a/src/styles/components/Contact.css
+++ b/src/styles/components/Contact.css
@@ -11,7 +11,7 @@
   font-size: 2.9vw;
   font-weight: 600;
   padding-top: 15vw;
-  margin-left: 15vw;
+  margin-left: 20vw;
   margin-right: 25vw;
   margin-bottom: 10vw;
 }
